# polly-subtitle-translator

./: .gitignore  .taurignore  AGENTS.md  LICENSE  README.md  README_ZH.md  check_errors.cjs  index.html  latest.json  nightly.json  package-lock.json  package.json  privacy.md  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.devin/agents/auditor/: AGENT.md
.devin/agents/reviewer/: AGENT.md
.github/workflows/: ci.yml  nightly.yml  release.yml
config/: prompts.json
docs/: auto-update-publish-guide.md  mac-adaptation-plan.md  nightly-publish-guide.md  phase2-competitor-analysis.md  phase2-roadmap.md  phase2-strategy-analysis.md  生成应用图标.py
scripts/: gen-favicon.cjs  publish.mjs
src/: App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  check_err.txt  check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  config.rs  context_menu.rs  db.rs  error.rs  ffmpeg.rs  ipc.rs  lib.rs  main.rs  player.rs  search.rs  subtitle.rs  translate.rs
src-tauri/src/translate/: translate_ai.rs  translate_utils.rs
src-tauri/tests/: e2e.rs  integration_tests.rs
src-tauri/tests/fixtures/: clarksons_farm.srt  rick_and_morty.srt  rick_s09e07.srt
src-tauri/tests/helpers/: checks_l1.rs  checks_l2.rs  checks_l3.rs  config.rs  fixture.rs  judge.rs  mod.rs  report.rs  state.rs  translate_runner.rs
src/__tests__/: App.drop.test.ts  platform.example.test.ts  platform.ts  setup.ts
src/__tests__/components/: AutoTextarea.test.tsx  ExportDialog.test.tsx  FfmpegDownloadDialog.test.tsx  HdrNotice.test.tsx  RestoreOriginalDialog.test.tsx  SearchDialog.test.tsx  SubtitleListPanel.test.tsx  SubtitlePreviewPanel.test.tsx  SubtitleStreamEditorDialog.test.tsx  TranslatePanel.test.tsx  UpdateDialog.test.tsx  VideoPlayer.test.tsx
src/__tests__/lib/: services.test.ts  utils.test.ts
src/__tests__/stores/: devModeStore.test.ts  ffmpegStore.test.ts  libmpvStore.test.ts  subtitleStore.test.ts  themeStore.test.ts  translateStore.test.ts  updateStore.test.ts  videoStore.test.ts
src/__tests__/views/: SettingsView.test.tsx
src/components/: AutoTextarea.tsx  ExportDialog.tsx  FfmpegDownloadDialog.tsx  GlossaryConfirmDialog.tsx  HdrNotice.tsx  RestoreOriginalDialog.tsx  SearchDialog.tsx  SubtitleListPanel.tsx  SubtitlePreviewPanel.tsx  SubtitleStreamEditorDialog.tsx  TranslatePanel.tsx  UpdateDialog.tsx  VideoPlayer.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  progress.tsx  scroll-area.tsx  select.tsx  tabs.tsx
src/lib/: api.ts  i18n.ts  ipc-types.ts  logger.ts  services.ts  utils.ts
src/locales/: en.json  zh.json
src/stores/: batchStore.ts  devModeStore.ts  ffmpegStore.ts  libmpvStore.ts  subtitleStore.ts  themeStore.ts  translateStore.ts  updateStore.ts  videoStore.ts
src/styles/: globals.css
src/views/: BatchView.tsx  MainView.tsx  SettingsView.tsx
